--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./style.css" rel="stylesheet">
+    <title> </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
-  
+    <div id="app">
+      <header>
+        <img src="./assets/logo.svg" alt="Logo da NLW">
+      </header>
+        <div class="card">
+          <h2>24/11 <span>Quinta</span></h2>
+          <ul>
+            <li>
+              <img src="./assets/icon=brazil.svg">
+              <strong>16:00</strong>
+              <img src="./assets/icon=serbia.svg">
+          </ul>
+            
+        </div>
+    </div>
   </body>
 </html>
